fixed pokecard spacing on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -181,6 +181,7 @@ header p {
 
   .pokeCards {
     height: 90vh;
+    justify-content: space-evenly;
   }
 
   .pokeCard {
